<resources>
    <string name="app_name">Aktywnosci</string>
    <string name="main_button_text">Main page</string>
    <string name="stats_button_text">Stats</string>
    <string name="stats">Health	588 (+ 95)\nHP Regen	8.5 (+ 0.75)\nMana	377.2 (+ 37)\nMana Regen	7.6 (+ 0.8)\n
        Movement Speed	335\nAttack Dmg	68 (+ 3.1)\nAttack Speed	0.625 (+ 2.9%)\nRange	125\nArmor	30 (+ 3.5)\nMagic Resist	39 (+ 1.25)</string>
    <string name="bio_button_text">Bio</string>
    <string name="bio">Talon s earliest memories are the darkness of Noxus underground passages and the reassuring steel of a blade. He remembers no family, warmth, or kindness. Instead, the clink of stolen gold and the security of a wall at his back are all the kinship he has ever craved. Kept alive only by his quick wits and deft thievery, Talon scraped out a living in the seedy underbelly of Noxus. His mastery of the blade quickly marked him as a threat, and Noxian guilds sent assassins to him with a demand: join their ranks or be killed. He left the bodies of his pursuers dumped in Noxus moat as his response.
The assassination attempts grew increasingly frequent until one assailant met Talon blade-for-blade in a match of strength. To his surprise, Talon was disarmed and facing down his executioners sword when the assassin revealed himself to be General Du Couteau. The General offered Talon the choice between death at his hand, or life as an agent of the Noxian High Command. Talon chose life, on the condition that his service was to Du Couteau alone, for the only type of orders he could respect were from one he could not defeat.
Talon remained in the shadows, carrying out secret missions on Du Couteaus orders that took him from the frigid lands of the Freljord to the inner sanctums of Demacia itself. When the general vanished, Talon considered claiming his freedom, but he had gained immense respect for Du Couteau after years in his service. He became obsessed with tracking down the generals whereabouts, and scours the land in search of those responsible for Du Couteaus disappearance.</string>
</resources>
