<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:background="@color/background">

    <TextView
        android:id="@+id/textViewBio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bio"
        android:textSize="15sp" />
    <Button
        android:id="@+id/main_button"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_below="@id/textViewBio"
        android:layout_alignLeft="@id/textViewBio"
        android:layout_marginTop="20dp"
        android:onClick="onShowMain"
        android:text="@string/main_button_text" />
    <Button
        android:id="@+id/statistics_button"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/textViewBio"
        android:layout_alignRight="@id/textViewBio"
        android:onClick="onShowStats"
        android:text="@string/stats_button_text" />
</RelativeLayout>