<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <TextView
        android:id="@+id/textViewStats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stats"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/textViewExtra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="3sp"
        android:textSize="15sp" />

    <Button
        android:id="@+id/bio_button"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_below="@id/textViewStats"
        android:layout_alignLeft="@id/textViewStats"
        android:layout_marginTop="20dp"
        android:onClick="onShowBio"
        android:text="@string/bio_button_text" />

    <Button
        android:id="@+id/main_button"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_alignRight="@id/textViewStats"
        android:layout_below="@id/textViewStats"
        android:onClick="onShowMain"
        android:text="@string/main_button_text" />
</RelativeLayout>